--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,10 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run all
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@latest
+        with:
+          version: latest
       - name: Create Release
         uses: ./
         with:
