--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - run: npm install
       - run: npm run all
       - name: Install Octopus CLI
-        uses: OctopusDeploy/install-octopus-cli-action@latest
+        uses: OctopusDeploy/install-octopus-cli-action@v1.1.1
         with:
           version: latest
       - name: Create Release
