--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,19 +4,20 @@ on:
   push:
 
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
+  build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: npm install
+      - run: npm run all
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: Install Octopus CLI
         uses: OctopusDeploy/install-octopus-cli-action@v1.1.1
         with:
           version: latest
-      - run: npm run all
       - name: Create Release
         uses: ./
         with:
