--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "OctopusDeploy",
+  "author": "Octopus Deploy",
   "bugs": {
     "url": "https://github.com/OctopusDeploy/create-release-action/issues"
   },
@@ -7,7 +7,7 @@
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.4"
   },
-  "description": "GitHub Action to Create a Relase in Octopus Deploy",
+  "description": "GitHub Action to Create a Release in Octopus Deploy",
   "devDependencies": {
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
@@ -26,6 +26,7 @@
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
+  "homepage": "https://github.com/OctopusDeploy/create-release-action#readme",
   "jest": {
     "clearMocks": true,
     "collectCoverage": true,
@@ -53,7 +54,7 @@
     "octopus-deploy",
     "github-actions"
   ],
-  "main": "dist/index.js",
+  "main": "lib/main.js",
   "name": "create-release-action",
   "repository": {
     "type": "git",
@@ -61,7 +62,7 @@
   },
   "scripts": {
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
-    "build": "tsc",
+    "build": "tsc && ncc build",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
