--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,10 @@
-name: 'Create Release'
-description: 'Create a release in Octopus Deploy'
-author: 'OctopusDeploy'
+name: 'Create Release in Octopus Deploy'
+description: 'GitHub Action to create a release in Octopus Deploy'
+author: 'Octopus Deploy'
+branding: 
+  color: 'purple'
+  icon: 'package'
+
 inputs:
   api_key:
     description: 'The API key used to access Octopus Deploy. You must provide an API key or username and password. If the guest account is enabled, a key of API-GUEST may be used. It is strongly recommended that this value retrieved from a GitHub secret.'
@@ -109,6 +113,7 @@ inputs:
   what_if:
     default: 'false'
     description: 'Perform a dry run; do not create or deploy a release.'
+
 runs:
   using: 'node12'
   main: 'dist/index.js'
