--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
     "url": "https://github.com/OctopusDeploy/create-release-action/issues"
   },
   "dependencies": {
-    "@actions/core": "^1.2.6",
+    "@actions/core": "^1.2.7",
     "@actions/exec": "^1.0.4",
     "tmp": "^0.2.1"
   },
   "description": "GitHub Action to Create a Release in Octopus Deploy",
   "devDependencies": {
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
     "@types/tmp": "^0.2.0",
-    "@typescript-eslint/parser": "^4.21.0",
-    "@vercel/ncc": "^0.27.0",
-    "eslint": "^7.23.0",
+    "@typescript-eslint/parser": "^4.22.1",
+    "@vercel/ncc": "^0.28.5",
+    "eslint": "^7.25.0",
     "eslint-plugin-github": "^4.1.3",
-    "eslint-plugin-jest": "^24.3.4",
+    "eslint-plugin-jest": "^24.3.6",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
-    "js-yaml": "^4.0.0",
+    "js-yaml": "^4.1.0",
     "prettier": "2.2.1",
-    "ts-jest": "^26.5.4",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "homepage": "https://github.com/OctopusDeploy/create-release-action#readme",
@@ -54,19 +54,19 @@
     "github-actions"
   ],
   "license": "Apache-2.0",
-  "main": "lib/main.js",
+  "main": "out/index.js",
   "name": "create-release-action",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OctopusDeploy/create-release-action.git"
   },
   "scripts": {
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
+    "all": "npm run format && npm run build && npm test",
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
-    "lint": "eslint src/**/*.ts",
-    "package": "ncc build --source-map --license licenses.txt",
+    "prebuild": "eslint src/**/*.ts",
+    "postbuild": "ncc build -o dist",
     "test": "jest"
   },
   "version": "1.0.1"
