--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,9 +36,9 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - name: Install Octopus CLI
-        uses: OctopusDeploy/install-octopus-cli-action@v1.1.1
+        uses: OctopusDeploy/install-octopus-cli-action@v1.2
         with:
-          version: latest
+          version: '*'
       - run: npm run all
         name: Compile and run tests
       - run: |
