--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -6,15 +6,16 @@ name: release-please
 env:
   ACTION_NAME: create-release-action
 jobs:
-  release-please:
+  release-please-release:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v3
         id: release
         with:
-          command: github-release
           package-name: ${{env.ACTION_NAME}}
           release-type: node
+          token: ${{ github.token }}
+          command: github-release
       - uses: actions/checkout@v3
       - name: Tag major and minor versions
         if: ${{ steps.release.outputs.release_created }}
@@ -29,3 +30,15 @@ jobs:
           git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
           git push origin v${{ steps.release.outputs.major }}
           git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
+  release-please-pr:
+    runs-on: ubuntu-latest
+    needs:
+      - release-please-release
+    steps:
+      - id: release-pr
+        uses: google-github-actions/release-please-action@v3
+        with:
+          token: ${{ secrets.INTEGRATIONS_FNM_BOT_TOKEN }}
+          release-type: node
+          package-name: ${{env.ACTION_NAME}}
+          command: release-pr
