Revert "chore: updated conditional check"
This reverts commit 28b1fe01567c0054216b87ccd6526139b45b190b.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Test Report
         uses: dorny/test-reporter@v1
-        if: success()
+        if: success() || failure()
         with:
           name: JEST Tests
           path: 'reports/jest-*.xml'
