--- a/action.yml
+++ b/action.yml
@@ -6,89 +6,29 @@ branding:
   icon: 'package'
 
 inputs:
+  project:
+    description: 'Required: The name or ID of the project associated with this release.'
   api_key:
-    description: 'The API key used to access Octopus Deploy. You must provide an API key or username and password. If the guest account is enabled, a key of API-GUEST may be used. It is strongly recommended that this value retrieved from a GitHub secret.'
-  cancel_on_timeout:
-    default: false
-    description: 'Cancel the deployment if the deployment_timeout is exceeded (the default timeout is 10 minutes).'
+    description: 'Optional: The API key used to access Octopus Deploy. An API key is required, but you should use the OCTOPUS_API_KEY environment variable instead of this. If the guest account is enabled, a key of API-GUEST may be used. It is strongly recommended that this value retrieved from a GitHub secret.'
   channel:
     description: 'The name or ID of the channel to use for the new release. If omitted, the best channel will be selected.'
-  config_file:
-    description: 'The path to a configuration file of default values with one "key=value" per line.'
-  debug:
-    default: false
-    description: 'Enable debug logging.'
-  default_package_version:
-    default: false
-    description: 'Use the default version number of all packages for this release.'
-  deploy_at:
-    description: 'The time at which deployment should start (scheduled deployment), specified as any valid DateTimeOffset format, and assuming the time zone is the current local time zone.'
-  deploy_to:
-    description: 'The name or ID of the environment to automatically deploy to (i.e. "Production" or "Environments-1"); specify this argument multiple times to deploy to multiple environments.'
-  deployment_check_sleep_cycle:
-    default: '00:00:10'
-    description: 'The duration between deployment status checks (format: HH:MM:SS).'
-  deployment_timeout:
-    default: '00:00:10'
-    description: 'The duration to wait for the deployment to finish (format: HH:MM:SS). Note: This will not stop the deployment; the input value, wait_for_deployment is required.'
-  exclude_machines:
-    description: 'A comma-separated list of machine names to exclude in the deployed environment. If empty, all machines in the environment will be considered.'
-  force:
-    default: false
-    description: 'If a project is configured to skip packages with already-installed versions, override this setting to force re-deployment.'
-  force_package_download:
-    default: false
-    description: 'Force download of installed packages.'
   git_ref:
     description: 'Git branch reference to the specific resources of a version controlled Octopus Project. This is required for version controlled projects.'
   git_commit:
     description: 'Git commit pointing to the specific resources of a version controlled Octopus Project. If empty, it will use the HEAD from the corresponding gitRef parameter.'
-  guided_failure:
-    default: false
-    description: 'Use Guided Failure mode.'
-  ignore_channel_rules:
-    default: false
-    description: 'Create the release ignoring any version rules specified by the channel.'
   ignore_existing:
     default: false
     description: 'Ignore existing releases if present in Octopus Deploy with the matching version number.'
-  ignore_ssl_errors:
-    default: false
-    description: 'Ignore certificate errors when communicating with Octopus Deploy. Warning: enabling this option creates a security vulnerability.'
-  log_level:
-    default: 'debug'
-    description: 'The log level; valid options are "verbose", "debug", "information", "warning", "error", and "fatal".'
-  no_deploy_after:
-    description: 'Time at which scheduled deployment should expire, specified as any valid DateTimeOffset format, and assuming the time zone is the current local time zone.'
-  no_raw_log:
-    default: false
-    description: 'Print the raw log of failed tasks.'
-  package:
-    deprecationMessage: 'Please use the input parameter, "packages" instead; it supports multi-line input lists with the same format.'
-    description: 'The version number to use for a package in the release (format: StepName:Version or PackageID:Version or StepName:PackageName:Version).'
-  package_prerelease:
-    description: 'Pre-release for latest version of all packages to use for this release.'
   package_version:
     description: 'The version number of all packages to use for this release.'
   packages:
     description: 'A multi-line list of version numbers to use for a package in the release. Format: StepName:Version or PackageID:Version or StepName:PackageName:Version. StepName, PackageID, and PackageName can be replaced with an asterisk ("*"). An asterisk will be assumed for StepName, PackageID, or PackageName if they are omitted.'
-  packages_folder:
-    description: 'The folder designated for containing packages.'
-  password:
-    description: 'The password to used to authenticate with Octopus Deploy. It is strongly recommended to retrieve this value from a GitHub secret.'
-  progress:
-    default: false
-    description: 'Show progress of the deployment.'
-  project:
-    description: 'The name or ID of the project associated with this release.'
   proxy:
     description: 'The URL of a proxy to use (i.e. https://proxy.example.com).'
   proxy_password:
     description: 'The password used to connect to a proxy. It is strongly recommended to retrieve this value from a GitHub secret. If proxy_username and proxy_password are omitted and proxy URL is specified, the default credentials are used.'
   proxy_username:
     description: 'The username used to connect to a proxy. It is strongly recommended to retrieve this value from a GitHub secret.'
-  raw_log_file:
-    description: 'Redirect the raw log of failed tasks to a file.'
   release_notes:
     description: 'The release notes associated with the new release (Markdown is supported).'
   release_notes_file:
@@ -97,29 +37,8 @@ inputs:
     description: 'The number for the new release.'
   server:
     description: 'The base URL hosting Octopus Deploy (i.e. "https://octopus.example.com/"). It is recommended to retrieve this value from an environment variable.'
-  skip:
-    description: 'Skip a step by name.'
   space:
     description: 'The name or ID of a space within which this command will be executed. If omitted, the default space will be used.'
-  specific_machines:
-    description: 'A comma-separated list of machine names to target in the deployed environment. If not specified all machines in the environment will be considered.'
-  tenant:
-    description: 'Create a deployment for the tenant with this name or ID; specify this argument multiple times to add multiple tenants or use a wildcard ("*") to deploy to all tenants who are ready for this release (according to lifecycle).'
-  tenant_tag:
-    description: 'Create a deployment for tenants matching this tag; specify this argument multiple times to build a query/filter with multiple tags.'
-  timeout:
-    default: 600
-    description: 'A timeout value in seconds for network operations.'
-  username:
-    description: 'The username used to authenticate with Octopus Deploy. You must provide an apiKey or username and password. It is strongly recommended to retrieve this value from a GitHub secret.'
-  variable:
-    description: 'Values for any prompted variables in the format, Label:Value. For JSON values, embedded quotation marks should be escaped with a backslash.'
-  wait_for_deployment:
-    default: false
-    description: 'Wait for deployment to finish.'
-  what_if:
-    default: false
-    description: 'Perform a dry run; do not create or deploy a release.'
 
 runs:
   using: 'node12'
