--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
     "format-check": "prettier --check **/*.ts",
     "prebuild": "eslint src/**/*.ts",
     "postbuild": "ncc build out/index.js -o dist",
-    "test": "jest --ci --reporters=default --reporters=jest-junit"
+    "test": "jest --ci --reporters=default --reporters=jest-junit",
+    "test:unit": "jest --ci --reporters=default --reporters=jest-junit --testPathPattern=__tests__/unit",
+    "test:integration": "jest --ci --reporters=default --reporters=jest-junit --testPathPattern=__tests__/integration"
   },
   "version": "1.2.0"
 }
