--- a/action.yml
+++ b/action.yml
@@ -41,6 +41,10 @@ inputs:
   release_notes_file:
     description: 'Path to a file that contains release notes for the new release. Supports Markdown files.'
 
+outputs:
+  created_release_number:
+    description: 'The release number assigned to the Release in Octopus Deploy'
+
 runs:
   using: 'node12'
   main: 'dist/index.js'
