--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "description": "GitHub Action to Create a Release in Octopus Deploy",
   "devDependencies": {
+    "@octopusdeploy/api-client": "^1.3.0",
+    "@octopusdeploy/message-contracts": "^1.3.0",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.1",
     "@types/tmp": "^0.2.3",
