--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 9,
-    "project": "./tsconfig.json",
+    "project": "./tsconfig.eslint.json",
     "sourceType": "module"
   },
   "plugins": ["jest", "@typescript-eslint"],
@@ -65,5 +65,14 @@
   // eslint doesn't know about the global NodeJS variable
   "globals": {
     "NodeJS": true
-  }
+  },
+  "overrides": [
+    {
+      "files": "__tests__/**/*.ts",
+      "env": {"jest": true, "node": true},
+      "rules": {
+        "filenames/match-regex": 0
+      }
+    }
+  ]
 }
