--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
+    "@octopusdeploy/api-client": "github:OctopusDeploy/api-client.ts#enh-dropenvvars",
+    "@octopusdeploy/message-contracts": "^1.3.1",
     "tmp": "^0.2.1"
   },
   "description": "GitHub Action to Create a Release in Octopus Deploy",
   "devDependencies": {
-    "@octopusdeploy/api-client": "^1.4.0",
-    "@octopusdeploy/message-contracts": "^1.3.1",
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
     "@types/tmp": "^0.2.3",
