--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@actions/exec": "^1.1.1",
     "@octopusdeploy/api-client": "github:OctopusDeploy/api-client.ts#enh-dropenvvars",
-    "@octopusdeploy/message-contracts": "^1.3.1",
     "tmp": "^0.2.1"
   },
   "description": "GitHub Action to Create a Release in Octopus Deploy",
   "devDependencies": {
+    "@octopusdeploy/runtime-inputs": "^0.16.0",
     "@types/jest": "^29.2.1",
+    "@types/json-patch": "^0.0.30",
+    "@types/lodash": "^4.14.188",
     "@types/node": "^18.11.9",
     "@types/tmp": "^0.2.3",
     "@typescript-eslint/parser": "^5.42.0",
