--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,18 @@
 name: 'build-test'
 on:
-  pull_request:
-    paths-ignore:
-      - '**.md'
   push:
     paths-ignore:
       - '**.md'
   schedule:
     # Daily 5am australian/brisbane time (7pm UTC)
     - cron: '0 19 * * *'
+  workflow_dispatch:
+
 env:
   SA_PASSWORD: ${{ secrets.DB_IMAGE_SA_PASSWORD }}
   ADMIN_API_KEY: ${{ secrets.OD_IMAGE_ADMIN_API_KEY }}
   SERVER_URL: 'http://localhost:8080'
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -46,11 +46,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install Octopus CLI 🐙
-        uses: OctopusDeploy/install-octopus-cli-action@v1
-        with:
-          version: '*'
-
       - name: Install package dependencies
         run: npm install
 
@@ -58,7 +53,7 @@ jobs:
         id: npm_tests
         env:
           OCTOPUS_TEST_URL: ${{ env.SERVER_URL }}
-          OCTOPUS_TEST_APIKEY: ${{ env.ADMIN_API_KEY }}
+          OCTOPUS_TEST_API_KEY: ${{ env.ADMIN_API_KEY }}
         run: npm run all
 
       - name: Test Report
@@ -73,8 +68,9 @@ jobs:
         id: self_test
         uses: ./
         env:
-          OCTOPUS_HOST: ${{ env.SERVER_URL }}
+          OCTOPUS_URL: ${{ env.SERVER_URL }}
           OCTOPUS_API_KEY: ${{ env.ADMIN_API_KEY }}
+          OCTOPUS_SPACE: 'Default'
         with:
           project: ${{ steps.npm_tests.outputs.gha_selftest_project_name }} # see integration.test.ts
 
