--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           token: ${{ secrets.INTEGRATIONS_FNM_BOT_TOKEN }}
 
-      - name: Set Node.js 20.x
+      - name: Setup node 20
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
