--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set Node.js 20.x
+      - name: Setup node 20
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
